Fix preview icons z-index

--- a/chrome/css/styles.css
+++ b/chrome/css/styles.css
@@ -65,3 +65,6 @@
     cursor: pointer;
     z-index: 2;
 }
+.gallery-container .gallery .icons-list {
+    z-index: 2;
+}
